# Fin-Brief

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 01_model_exploration.ipynb  02_data_exploration.ipynb  03_training.ipynb  03_training_and_inference.ipynb  evaluate_gemma3_agnews_multi-gpu.py  finetune_gemma3_agnews_multi-gpu.py  finetune_with_evaluation_gemma3_agnews_multi-gpu.py  standalone_evaluation_gemma3_agnews_multi-gpu.py
