[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fin_brief"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Yihan" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["fin_brief"]
include = ["pyproject.toml", "fin_brief/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fin_brief"]
force-sort-within-sections = true

